--- a/teaching-sta302.qmd
+++ b/teaching-sta302.qmd
@@ -118,41 +118,41 @@ Before class starts you should go through Chapter 1 "[Telling stories with data]
 
 ### Summary
 
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Item                                     | Weight (%) | Due date                              | Notes                                                                                                                                                                                                                                                                                                   |
-+==========================================+===========:+======================================:+========================================================================================================================================================================================================================================================================================================:+
-| Quiz                                     | 7          | Tuesdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                                    |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| SQL quiz                                 | 1          | Tuesday, noon, Week 6                 |                                                                                                                                                                                                                                                                                                         |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Personal website                         | 1          | Tuesday, noon, Week 9                 | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                                     |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Mini-essays                              | 6          | Tuesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                                    |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Term papers                              | 46         | Tuesdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                               |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            | Term Paper I: 23 January 2024         | Only best two of three term papers count.                                                                                                                                                                                                                                                               |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            | Term Paper II: 13 February 2024       | Marking starts, noon, on the Thursday after submission, and you can update until then i.e. submissions made by noon, Tuesday, Week 3 can be updated until noon, Thursday, Week 3 (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.       |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            | Term Paper III: 12 March 2024         | Term Paper I: [Donaldson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-one)                                                                                                                                                                                                    |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Term Paper II: [Mawson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-two).                                                                                                                                                                                                     |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Term paper III: Pick one of [Murrumbidgee Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-three), [Spadina Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-spadina), or [Spofforth Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-five) |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Conduct peer review of Term/Final papers | 3          | Wednesdays, noon, Weeks 3, 6, 9, 12   | Conduct peer review for six other term/final papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a term paper that does not have four other entries. You will only have 24 hours to do this.                                |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Students are not assigning grades to other students, but are instead getting the mark based on the quality of the feedback they provide to other students.                                                                                                                                              |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Mid-term                                 | 6          | In-class, Tuesday, 12 March 2024      | A mid-term consisting of a few questions.                                                                                                                                                                                                                                                               |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Final paper                              | 30         | Tuesday, noon, Week 12 (2 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                             |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | Marking starts, noon, Thursday 18 April and you can update until then i.e. submissions made by noon, Tuesday, Week 12 can be updated until noon, Thursday, 18 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts. \|                 |
-|                                          |            |                                       |                                                                                                                                                                                                                                                                                                         |
-|                                          |            |                                       | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                                   |
-+------------------------------------------+------------+---------------------------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Item                                     | Weight (%) | Due date                              | Notes                                                                                                                                                                                                                                                                                                    |
++==========================================+===========:+======================================:+=========================================================================================================================================================================================================================================================================================================:+
+| Quiz                                     | 7          | Tuesdays, noon, Weeks 1-12            | Only best seven out of twelve count.                                                                                                                                                                                                                                                                     |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| SQL quiz                                 | 1          | Tuesday, noon, Week 6                 |                                                                                                                                                                                                                                                                                                          |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Personal website                         | 1          | Tuesday, noon, Week 9                 | Create a personal website using Quarto and make it live via GitHub Pages. At a minimum, it must include a bio and a CV in PDF form.                                                                                                                                                                      |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Mini-essays                              | 6          | Tuesdays, noon, Weeks 1-12            | Only best three out of twelve count.                                                                                                                                                                                                                                                                     |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Term papers                              | 46         | Tuesdays, noon, Weeks 3, 6, 9         | You must submit Term Paper I in order to pass the course.                                                                                                                                                                                                                                                |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            | Term Paper I: 23 January 2024         | Only best two of three term papers count.                                                                                                                                                                                                                                                                |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            | Term Paper II: 13 February 2024       | Marking starts, noon, on the Thursday after submission, and you can update until then i.e. submissions made by noon, Tuesday, Week 3 can be updated until noon, Thursday, Week 3 (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts.        |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            | Term Paper III: 12 March 2024         | Term Paper I: [Donaldson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-one)                                                                                                                                                                                                     |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            |                                       | Term Paper II: [Mawson Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-two).                                                                                                                                                                                                      |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            |                                       | Term paper III: Pick one of [Murrumbidgee Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-murrumbidgee), [Spadina Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-spadina), or [Spofforth Paper](https://tellingstorieswithdata.com/23-assessment.html#sec-paper-five) |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Conduct peer review of Term/Final papers | 3          | Wednesdays, noon, Weeks 3, 6, 9, 12   | Conduct peer review for six other term/final papers, by creating a GitHub Issue or Pull Request. Papers will be distributed by a spreadsheet---add a link to the Issue/PR to a term paper that does not have four other entries. You will only have 24 hours to do this.                                 |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            |                                       | Students are not assigning grades to other students, but are instead getting the mark based on the quality of the feedback they provide to other students.                                                                                                                                               |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Mid-term                                 | 6          | In-class, Tuesday, 12 March 2024      | A mid-term consisting of a few questions.                                                                                                                                                                                                                                                                |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| Final paper                              | 30         | Tuesday, noon, Week 12 (2 April 2024) | You must submit this paper.                                                                                                                                                                                                                                                                              |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            |                                       | Marking starts, noon, Thursday 18 April and you can update until then i.e. submissions made by noon, Tuesday, Week 12 can be updated until noon, Thursday, 18 April (this is to allow you to incorporate peer review comments). Please do not make any changes after marking starts. \|                  |
+|                                          |            |                                       |                                                                                                                                                                                                                                                                                                          |
+|                                          |            |                                       | [Final paper](https://tellingstorieswithdata.com/23-assessment.html#sec-final-paper).                                                                                                                                                                                                                    |
++------------------------------------------+------------+---------------------------------------+----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 
 You must submit Term Paper 1. You must submit the Final Paper. Beyond that, you have scope to pick an assessment schedule that works for you. I will take your best three of the twelve insight mini-essays for that six per cent, and your best seven of twelve quizzes for that seven per cent. I take your two best papers from the three term papers for that 46 per cent (23 per cent for each). You get up to three percentage points for conducting peer review of other student papers, (half a percentage point per review). There is 30 per cent allocated for the Final Paper.
 
