update history course

--- a/events-tdw.qmd
+++ b/events-tdw.qmd
@@ -80,13 +80,12 @@ Past committee members:
 	- [Thomas Davidson](https://www.thomasrdavidson.com/) is an Assistant Professor of Sociology at Rutgers University—New Brunswick. He specializes in using computational methods and data from social media to analyze far-right activism, populism, and hate speech. He is currently researching the relationship between ranking and recommendation algorithms and activism, the applications of generative AI to sociological research, and the social context of content moderation. His work has been published in venues including *Social Forces*, *Mobilization*, and *Socius*. 
 - Friday 8 March 2024, noon - 1pm
 	- **Jonathan Mellon**, West Point
-	- "[Using LLMs to code open-text social survey responses at scale](https://youtu.be/oN-FG6XfDUk)"
-	- We compare the accuracy of six LLMs using a few-shot approach, three supervised learning algorithms (SVM, DistilRoBERTa, and a neural network trained on BERT embeddings), and a second human coder on the task of categorizing "most important issue" responses from the British Election Study Internet Panel into 50 categories. For the scenario where a researcher lacks existing training data, the accuracy of the highest-performing LLM (Claude-1.3: 93.9%) neared human performance (94.7%) and exceeded the highest-performing supervised approach trained on 1000 randomly sampled cases (neural network: 93.5%). In a scenario where previous data has been labeled but a researcher wants to label novel text, the best LLM's (Claude-1.3: 80.9%) few-shot performance is only slightly behind the human (88.6%) and exceeds the best supervised model trained on 576,000 cases (DistilRoBERTa: 77.8%). PaLM-2, Llama-2, and the SVM all performed substantially worse than the best LLMs and supervised models across all metrics and scenarios. Our results suggest that LLMs may allow for greater use of open-ended survey questions in the future. Open Access link to paper (published in *Research & Politics*) Jonathan Mellon, Jack Bailey, Ralph Scott, James Breckwoldt, Marta Miori, Phillip Schmedeman: https://journals.sagepub.com/doi/full/10.1177/20531680241231468. 
-Replication code/data: https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/8H0WTT (includes all prompts/API calls/local models etc).
+	- [Using LLMs to code open-text social survey responses at scale](https://youtu.be/oN-FG6XfDUk)
+	- We compare the accuracy of six LLMs using a few-shot approach, three supervised learning algorithms (SVM, DistilRoBERTa, and a neural network trained on BERT embeddings), and a second human coder on the task of categorizing "most important issue" responses from the British Election Study Internet Panel into 50 categories. For the scenario where a researcher lacks existing training data, the accuracy of the highest-performing LLM (Claude-1.3: 93.9%) neared human performance (94.7%) and exceeded the highest-performing supervised approach trained on 1000 randomly sampled cases (neural network: 93.5%). In a scenario where previous data has been labeled but a researcher wants to label novel text, the best LLM's (Claude-1.3: 80.9%) few-shot performance is only slightly behind the human (88.6%) and exceeds the best supervised model trained on 576,000 cases (DistilRoBERTa: 77.8%). PaLM-2, Llama-2, and the SVM all performed substantially worse than the best LLMs and supervised models across all metrics and scenarios. Our results suggest that LLMs may allow for greater use of open-ended survey questions in the future. [Open access paper](https://journals.sagepub.com/doi/full/10.1177/20531680241231468) published in *Research & Politics* by Jonathan Mellon, Jack Bailey, Ralph Scott, James Breckwoldt, Marta Miori, Phillip Schmedeman and [replication code/data](https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/8H0WTT) (includes all prompts/API calls/local models etc).
 	- [Jonathan Mellon](https://www.jonathanmellon.com/) is an Associate Professor at West Point's Department of Systems Engineering and co-director of the British Election Study. His research focuses on improving measurement and causal inference in social science. He studies electoral behavior, online citizen engagement, and measuring public opinion. He holds a DPhil in Sociology from Nuffield College, University of Oxford.
 - Thursday 7 March 2024, noon - 1pm
 	- **Matheus Facure**, Nubank
-	- "[Why Banking has the Coolest Stats/Data Science Problems](https://youtu.be/Mk2pRvUPB-U)"
+	- [Why Banking has the Coolest Stats/Data Science Problems](https://youtu.be/Mk2pRvUPB-U)
 	- [Matheus Facure](https://matheusfacure.github.io) has a background in Economics and is a Staff Data Scientist at Nubank. He works mostly with credit underwriting and causal inference. He is the author of *Causal Inference in Python* (O'Reilly) and *Causal Inference for the Brave and True* (Online, Open Source).
 - Friday 1 March 2024, noon - 1pm
 	- **Jacob Austin**, Google DeepMind
@@ -95,7 +94,7 @@ Replication code/data: https://dataverse.harvard.edu/dataset.xhtml?persistentId=
 	- [Jacob Austin](http://www.jacobaustin.org) is a Senior Research Engineer at Google DeepMind, working on program synthesis and large language models. He was previously an AI Resident at Google Brain, and a Research Intern at NVIDIA with Anima Anandkumar. He holds a bachelor's degree in computer science and mathematics from Columbia University. He studied machine learning and robotics at the Columbia Creative Machines Lab. He is also a pianist who plays a lot of chamber music, and has performed at Carnegie Hall, Music Mountain, Apple Hill, and Kinhaven.
 - Thursday 29 February 2024, noon - 1pm
 	- **Sky CH-Wang**, Columbia University
-	- "[Do Androids Know They're Only Dreaming of Electric Sheep?](https://youtu.be/bkHsz50QeYE)"
+	- [Do Androids Know They're Only Dreaming of Electric Sheep?](https://youtu.be/bkHsz50QeYE)
 	- [Sky CH-Wang](https://skywang.me/) is a PhD Candidate in Computer Science at Columbia University advised by Zhou Yu and Smaranda Muresan. His research primarily revolves around Natural Language Processing (NLP). He is broadly interested in the area where NLP meets Computational Social Science (CSS). Here, his research primarily revolves around three major areas: (1) revealing and designing for social difference and inequality, (2) cross-cultural NLP, and (3) mechanistic interpretability. His research is supported by a NSF Graduate Research Fellowship. 
 - Thursday 22 February 2024, noon - 1pm
 	- **Jessica Otis**, George Mason University
