--- a/teaching-history_of_statistics.qmd
+++ b/teaching-history_of_statistics.qmd
@@ -1,5 +1,6 @@
 ---
 title: "History of statistics and data sciences"
+bibliography: references.bib
 ---
 
 ## Preamble 
@@ -31,14 +32,9 @@ The purpose of the course is to develop an appreciation of history of statistics
 
 ### Prerequisites
 
-At least 1.0 FCE 300+ level STA courses with a minimum grade of 80 per cent in each course.
+- At least 1.0 FCE 300+ level STA courses with a minimum grade of 80 per cent in each course.
 
 
-### Textbooks
-
-- Stigler, S, 1986, *The History of Statistics: The Measurement of Uncertainty before 1900*, Harvard University Press.
-- Friendly, M, and Wainer, H, 2021, *A History of Data Visualization and Graphic Communication*, Harvard University Press.
-- Sheynin, 2017, *Theory of Probability. A Historical Essay*, https://arxiv.org/abs/1802.09966, 
 
 ## Content
 
@@ -46,29 +42,29 @@ At least 1.0 FCE 300+ level STA courses with a minimum grade of 80 per cent in e
 
 Overview. Also early astronomical and gambling underpinnings. Least squares, combining observations, and uncertainty. Legendre, Laplace, Bernoulli, De Moivre, Simpson.
 
-- Content:
-  - Stephen E. Fienberg, 1992, 'A Brief History of Statistics in Three and One-Half Chapters: A Review Essay', *Statistical Science*.
-  - M. G. Kendall, 1960, 'Studies in the History of Probability and Statistics. Where Shall the History of Statistics Begin?', *Biometrika*.
-  - Stigler, 1986, Chs 1-2.
-  - Ian Hacking, 2006, *The Emergence of Probability*.
+
+- @Fienberg1992
+- @Kendall1960
+- @stigler [Chs 1-2]
+- @Hacking2006 ["Introduction"]
   
-
-
 ### Week 2
 
-Focuses on the 1700s, especially inverse probability. Gauss, Laplace, Central Limit Theorem.
+The 1700s, especially inverse probability. Gauss, Laplace, Central Limit Theorem.
 
-- Content:
-  - Stigler, 1986, Chs 3-4
-  - Sheynin, 2017, Chs 1-7.
+- @stigler [Chs 3-4]
+- @sheynin2018theory [Chs 1-7]
+- @Miller2020   
+  - @Kahneman2020
+  - @Shafer2020
+  - @Miller2020rejoinder
 
 ### Week 3
 
 Early 1800s, and moves to the social sciences. Quetelet, Poisson, Cournot, Lexis, binomials and Law of Large Numbers.
 
-- Content: 
-  - Stigler, 1986, Chs 5-6.
-  - Sheynin, 2017, Chs 8-9.
+- @stigler [Chs 5-6]
+- @sheynin2018theory [Chs 8-9]
   
 
 ### Week 4
@@ -76,8 +72,8 @@ Early 1800s, and moves to the social sciences. Quetelet, Poisson, Cournot, Lexis
 Late 1800s and heredity. Galton, Edgeworth, and Pearson. Regression and correlation.
 
 - Content: 
-  - Stigler, 1986, Chs 7-8.
-  - Sheynin, 2017, Chs 10-11.
+  - @stigler [Chs 7-8]
+  - @sheynin2018theory [Chs 10-11]
   - David Salsburg, 2002, *The Lady Tasting Tea*.
   - Theodore M. Porter, 2020, *The Rise of Statistical Thinking, 1820–1900*.
 
@@ -87,7 +83,7 @@ Late 1800s and heredity. Galton, Edgeworth, and Pearson. Regression and correlat
 Late 1800s and early 1900s. Edgeworth, Pearson, and Yule. Regression, and correlation.
 
 - Content: 
-  - Stigler, 1986, Chs 9-10.
+  - @stigler [Chs 9-10]
   - David Freedman, 1999, 'From association to causation: some remarks on the history of statistics'. 
   - Donald MacKenzie, 1981, *Statistics in Britain, 1865-1930: The Social Construction of Scientific Knowledge*.
   - Erich Lehmann, 2011, *Fisher, Neyman, and the Creation of Classical Statistics*, Springer.
@@ -97,50 +93,38 @@ Late 1800s and early 1900s. Edgeworth, Pearson, and Yule. Regression, and correl
 Early 1900s
 
   - Stephen M. Stigler, 1996, 'The History of Statistics in 1933', *Statistical Science*
-  - Sheynin, 2017, Chs 12-15.
+  - @sheynin2018theory [Chs 12-15]
   - Stephen M. Stigler, 2016, *The Seven Pillars of Statistical Wisdom*.
   - Jan von Plato, 1994, *Creating Modern Probability*.
   - Erich Lehmann, 2007, *Reminiscences of a Statistician*.
 
-### Week 7
+### Week 7 "Data visualization"
 
-Special topic: Data visualization
+- @historyofdataviz [Chs 1-6 and 9]
 
-- Content: 
-  - Friendly and Wainer, 2021, Chs 1-6 and 9.
+### Week 8 "The rise of Bayesian methods"
 
-### Week 8
+- @Fienberg2006
+- @Leonard2014
+- @McGrayne2012
+- @Nordhaus2007
+- @Lindley2001
+- @Gelman2013
+  - @Gelman2013rejoinder
 
-Special topic: Bayesian methods
+### Week 9 "Causal inference"
 
-- Content: 
-  - Stephen E. Fienberg, 2006, 'When Did Bayesian Inference Become "Bayesian"?', *Bayesian Analysis*.
-  - Thomas Hoskyns Leonard, 2014, 'A personal history of Bayesian statistics', *WIREs Computational Statistics*.
-  - Sharon Bertsch McGrayne, 2012, *The Theory That Would Not Die*.
-  - William D. Nordhaus, 'An Economic History of Computing'.
-  - Dennis V. Lindley, 2001, 'The Philosophy of Statistics', *Journal of the Royal Statistical Society: Series D*.
-  
+- @pearl [Ch 2]
 
-### Week 9
-
-Special topic: Causal inference
-
-
-- Content: 
-  - Judea Pearl and Dana Mackenzie, 2018, *Book of Why*, Ch 2.
-
-### Week 10
-
-Special topic: Whither statistics? The rise of data science
+### Week 10 "Whither statistics? The rise of data science"
 
 - Content: 
   - Leo Breiman, 2001, 'Statistical Modeling: The Two Cultures', *Statistical Sciences*.
   - David J. Hand, 2015, 'Statistics and computing: the genesis of data science', *Statistics and Computing*.
   - David Donoho, 2017, '50 Years of Data Science', *Journal of Computational and Graphical Statistics*.
+  - @Gelman2021
   
-### Week 11
-
-Special topic: Overlooked contributors
+### Week 11 "Overlooked contributors"
 
 - Content: 
   - Margo Anderson, 1992, 'The History of Women and the History of Statistics', *Journal of Women's History*
@@ -151,9 +135,7 @@ Special topic: Overlooked contributors
   - Louise M. Ryan, 'Reflections on diversity', in Xihong Lin, et al., eds, 2014, *Past, present, and future of statistical science*, CRC Press.
 
 
-### Week 12
-
-Special topic: Reckoning with the past and thinking about the future. Statistics and society.
+### Week 12 "Reckoning with the past and thinking about the future: Statistics and society"
 
 - Content: 
   - How to consider our history?
